tests/traci/variable_subscription/errors/UnknownVariable/errors.traci
Error: Answered with error to command 0xa4: Get Vehicle Variable: unsupported variable 0xff specified
Error: Answered with error to command 0xd4: Could not add subscription. Get Vehicle Variable: unsupported variable 0xff specified
